# stable-diffusion-pype-dev

./: .copier-answers.yml  .env.example  .envrc  .gitignore  LICENSE.txt  MARKATA-NEW-BLOG-README.md  README.md  dream_web_log.txt  markata.toml  pyproject.toml  refresh-and-push.sh  source_app_map.json  source_app_map_golden.json  sqooshem.py  stage-images.sh  stageme.py
.github/workflows/: build-site.yml  main.yml
InvokeAI-images/: dream_log.txt
abstract_oil_painting_church/: index.html
archive/: index.html
automatic1111/: index.html
bears_doing_jiu_jitsu_forest/: index.html
dolphins_storm/: index.html
noahs_ark/: index.html
oil_painted_church/: index.html
olivet/: index.html
stable_diffusion_pype_dev/: __about__.py  __init__.py  automatic1111_model.py  interactive_clean.py  invokeai_model.py  load.py  models.py
static/: dream_web_log.txt
warframe/: index.html
